パッケージインストール修正（公式追従）

--- a/Convert2ONNX.ipynb
+++ b/Convert2ONNX.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "machine_shape": "hm"
     },
     "kernelspec": {
       "name": "python3",
@@ -47,7 +48,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install -q calflops\n",
+        "!pip install -q faster_coco_eval calflops\n",
         "!pip install -q onnx onnxsim onnxruntime"
       ],
       "metadata": {
@@ -73,12 +74,14 @@
       "metadata": {
         "id": "drNOaeUGyCzO"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "# COCO\n",
+        "!wget https://github.com/Peterande/storage/releases/download/dfinev1.0/dfine_s_coco.pth -q -O model/dfine_n_coco.pth\n",
         "!wget https://github.com/Peterande/storage/releases/download/dfinev1.0/dfine_s_coco.pth -q -O model/dfine_s_coco.pth\n",
         "!wget https://github.com/Peterande/storage/releases/download/dfinev1.0/dfine_m_coco.pth -q -O model/dfine_m_coco.pth\n",
         "!wget https://github.com/Peterande/storage/releases/download/dfinev1.0/dfine_l_coco.pth -q -O model/dfine_l_coco.pth\n",
@@ -87,12 +90,13 @@
       "metadata": {
         "id": "H7ZpQV5Ewu8Z"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "# Objects365+COCO\n",
         "!wget https://github.com/Peterande/storage/releases/download/dfinev1.0/dfine_s_obj2coco.pth -q -O model/dfine_s_obj2coco.pth\n",
         "!wget https://github.com/Peterande/storage/releases/download/dfinev1.0/dfine_m_obj2coco.pth -q -O model/dfine_m_obj2coco.pth\n",
         "!wget https://github.com/Peterande/storage/releases/download/dfinev1.0/dfine_l_obj2coco.pth -q -O model/dfine_l_obj2coco.pth\n",
@@ -101,7 +105,7 @@
       "metadata": {
         "id": "ciHlva6OxtAh"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -116,6 +120,12 @@
     {
       "cell_type": "code",
       "source": [
+        "# COCO\n",
+        "# !python tools/deployment/export_onnx.py \\\n",
+        "#     --check \\\n",
+        "#     -c configs/dfine/dfine_hgnetv2_n_coco.yml \\\n",
+        "#     -r model/dfine_n_coco.pth\n",
+        "\n",
         "!python tools/deployment/export_onnx.py \\\n",
         "    --check \\\n",
         "    -c configs/dfine/dfine_hgnetv2_s_coco.yml \\\n",
@@ -145,6 +155,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Objects365+COCO\n",
         "!python tools/deployment/export_onnx.py \\\n",
         "    --check \\\n",
         "    -c configs/dfine/objects365/dfine_hgnetv2_s_obj2coco.yml \\\n",
@@ -211,11 +222,10 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "yU0pPI2XLyPc",
-        "outputId": "eac87963-6982-40d3-db6e-690c58be6b5c"
+        "outputId": "c1b8f4d7-a7b0-4e01-ef18-4d89ecb66684"
       },
       "execution_count": 9,
       "outputs": [
@@ -268,11 +278,10 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "V7W3ynx5NyL_",
-        "outputId": "3b9d4ff0-fd4c-4acc-e413-04e3d5a86143"
+        "outputId": "f219d4ef-f45f-4947-e32e-1fae38830333"
       },
       "execution_count": 11,
       "outputs": [
@@ -280,8 +289,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "CPU times: user 703 ms, sys: 34 ms, total: 737 ms\n",
-            "Wall time: 756 ms\n"
+            "CPU times: user 854 ms, sys: 20.1 ms, total: 874 ms\n",
+            "Wall time: 222 ms\n"
           ]
         }
       ]
@@ -299,11 +308,10 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "rdAhsk_f1nxD",
-        "outputId": "6c320b8a-fa21-477d-cbb4-b17271d0157a"
+        "outputId": "f6231c7d-5470-44ce-a028-088cf1d86823"
       },
       "execution_count": 12,
       "outputs": [
@@ -311,7 +319,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "824 ms ± 176 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+            "198 ms ± 16.3 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
           ]
         }
       ]
@@ -374,7 +382,7 @@
           "height": 550
         },
         "id": "FSjecexZMcsL",
-        "outputId": "f0731c23-879e-47e3-9fc4-b4c64c5a5310"
+        "outputId": "fdbec509-a154-4480-fc11-e02f020cb8ee"
       },
       "execution_count": 14,
       "outputs": [
