パス指定ミス修正、Nモデル追加。

--- a/Convert2ONNX.ipynb
+++ b/Convert2ONNX.ipynb
@@ -81,7 +81,7 @@
       "cell_type": "code",
       "source": [
         "# COCO\n",
-        "!wget https://github.com/Peterande/storage/releases/download/dfinev1.0/dfine_s_coco.pth -q -O model/dfine_n_coco.pth\n",
+        "!wget https://github.com/Peterande/storage/releases/download/dfinev1.0/dfine_n_coco.pth -q -O model/dfine_n_coco.pth\n",
         "!wget https://github.com/Peterande/storage/releases/download/dfinev1.0/dfine_s_coco.pth -q -O model/dfine_s_coco.pth\n",
         "!wget https://github.com/Peterande/storage/releases/download/dfinev1.0/dfine_m_coco.pth -q -O model/dfine_m_coco.pth\n",
         "!wget https://github.com/Peterande/storage/releases/download/dfinev1.0/dfine_l_coco.pth -q -O model/dfine_l_coco.pth\n",
@@ -121,10 +121,10 @@
       "cell_type": "code",
       "source": [
         "# COCO\n",
-        "# !python tools/deployment/export_onnx.py \\\n",
-        "#     --check \\\n",
-        "#     -c configs/dfine/dfine_hgnetv2_n_coco.yml \\\n",
-        "#     -r model/dfine_n_coco.pth\n",
+        "!python tools/deployment/export_onnx.py \\\n",
+        "    --check \\\n",
+        "    -c configs/dfine/dfine_hgnetv2_n_coco.yml \\\n",
+        "    -r model/dfine_n_coco.pth\n",
         "\n",
         "!python tools/deployment/export_onnx.py \\\n",
         "    --check \\\n",
@@ -141,10 +141,11 @@
         "    -c configs/dfine/dfine_hgnetv2_l_coco.yml \\\n",
         "    -r model/dfine_l_coco.pth\n",
         "\n",
-        "!python tools/deployment/export_onnx.py \\\n",
-        "    --check \\\n",
-        "    -c configs/dfine/dfine_hgnetv2_x_coco.yml \\\n",
-        "    -r model/dfine_x_coco.pth"
+        "# メモリ不足\n",
+        "# !python tools/deployment/export_onnx.py \\\n",
+        "#     --check \\\n",
+        "#     -c configs/dfine/dfine_hgnetv2_x_coco.yml \\\n",
+        "#     -r model/dfine_x_coco.pth"
       ],
       "metadata": {
         "id": "imcguSh3wi6z"
@@ -171,10 +172,11 @@
         "    -c configs/dfine/objects365/dfine_hgnetv2_l_obj2coco.yml \\\n",
         "    -r model/dfine_l_obj2coco.pth\n",
         "\n",
-        "!python tools/deployment/export_onnx.py \\\n",
-        "    --check \\\n",
-        "    -c configs/dfine/objects365/dfine_hgnetv2_x_obj2coco.yml \\\n",
-        "    -r model/dfine_x_obj2coco.pth"
+        "# メモリ不足\n",
+        "# !python tools/deployment/export_onnx.py \\\n",
+        "#     --check \\\n",
+        "#     -c configs/dfine/objects365/dfine_hgnetv2_x_obj2coco.yml \\\n",
+        "#     -r model/dfine_x_obj2coco.pth"
       ],
       "metadata": {
         "id": "05TZn4OLxBc9"
@@ -225,7 +227,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yU0pPI2XLyPc",
-        "outputId": "c1b8f4d7-a7b0-4e01-ef18-4d89ecb66684"
+        "outputId": "f7224fac-354c-4966-d6f1-d65b2c59adc3"
       },
       "execution_count": 9,
       "outputs": [
@@ -281,7 +283,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "V7W3ynx5NyL_",
-        "outputId": "f219d4ef-f45f-4947-e32e-1fae38830333"
+        "outputId": "c8b2fe05-3153-44f5-e815-b7e4f2549c54"
       },
       "execution_count": 11,
       "outputs": [
@@ -289,8 +291,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "CPU times: user 854 ms, sys: 20.1 ms, total: 874 ms\n",
-            "Wall time: 222 ms\n"
+            "CPU times: user 695 ms, sys: 9.05 ms, total: 704 ms\n",
+            "Wall time: 178 ms\n"
           ]
         }
       ]
@@ -311,7 +313,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rdAhsk_f1nxD",
-        "outputId": "f6231c7d-5470-44ce-a028-088cf1d86823"
+        "outputId": "74986027-ef76-40a1-d64c-bab761d2e8a5"
       },
       "execution_count": 12,
       "outputs": [
@@ -319,7 +321,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "198 ms ± 16.3 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+            "162 ms ± 4.66 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
           ]
         }
       ]
@@ -382,7 +384,7 @@
           "height": 550
         },
         "id": "FSjecexZMcsL",
-        "outputId": "fdbec509-a154-4480-fc11-e02f020cb8ee"
+        "outputId": "33c19cc3-f2f4-459b-86b7-83dac652ea98"
       },
       "execution_count": 14,
       "outputs": [
@@ -398,6 +400,38 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# ダウンロード"
+      ],
+      "metadata": {
+        "id": "-EsIeUFoB3W5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!find model -type f -name \"*.onnx\" | zip model.zip -@"
+      ],
+      "metadata": {
+        "id": "9nj2M_JYB5V7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import files\n",
+        "files.download('model.zip')"
+      ],
+      "metadata": {
+        "id": "_OLsQ6oAB4bQ"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
